<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="br.com.nglauber.animationdemo.propertyanimation.ViewPropertyAnimatorActivity">

    <Spinner
        android:id="@+id/spn_animations"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:entries="@array/animators"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spn_interpolators"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:entries="@array/listInterpolators"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spn_animations" />

    <ImageView
        android:id="@+id/img_bazinga"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bazinga" />

    <RadioGroup
        android:id="@+id/rg_animation_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/rb_obj_anim"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <RadioButton
            android:id="@+id/rb_obj_anim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/animation_code1" />

        <RadioButton
            android:id="@+id/rb_view_prop_anim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/animation_code2" />

        <RadioButton
            android:id="@+id/rb_xml_anim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/animation_xml" />

    </RadioGroup>

</android.support.constraint.ConstraintLayout>
